# three-bodies-micro

./: Cargo.toml  README.md  rust-toolchain.toml  shell.nix
.cargo/: config.toml
src/: boot.rs  color.rs  display.rs  main.rs  rand.rs  spi_bus.rs  vec2.rs
