[package]
name = "three-bodies"
version = "0.1.0"
authors = ["Simon Struck <simon@simonscode.org>"]
edition = "2021"
license = "MIT"

[dependencies]
esp-hal = { version = "0.17.0", features = ["esp32c6"] }
esp-println = { version = "0.9.0", features = ["esp32c6", "log"] }
esp-alloc = "0.3.0"
log = { version = "0.4.20" }
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.2.0"
st7735-lcd= "0.10.0"
micromath ="2.1.0"
embedded-graphics-framebuf = "0.5.0"

[dependencies.esp-backtrace]
version = "0.11.0"
features = [
    "esp32c6",
    "exception-handler",
    "panic-handler",
    "println",
]
[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
